<resources>
    <string name="app_name">PictureOfTheDay</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="photo_of_the_day_stub" translatable="false">photo_of_the_day_stub</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tdby">TDBY</string>
    <string name="search_in_wiki">search in wiki</string>
    <string name="ask_the_question">ask the question</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="screen_1" translatable="false">Screen 1</string>
    <string name="screen_2" translatable="false">Screen 2</string>
    <string name="sky_theme">SkyTheme</string>
    <string name="flower_theme">FlowerTheme</string>
    <string name="lime_theme">LimeTheme</string>

    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="system">System</string>
    <string name="choose_application_theme">Choose application theme:</string>
    <string name="recycler" translatable="false">Recycler</string>
    <string name="header">Header</string>
    <string name="additional_text">Additional text</string>

    <string name="large_text_mars" translatable="false">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
</resources>