<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выберите тему приложения:"
        android:gravity="center"
        android:textColor="?colorPrimary"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btnSkyTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sky_theme"
            android:textColor="?rootColor" />

        <RadioButton
            android:id="@+id/btnFlowerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flower_theme"
            android:textColor="?rootColor" />

        <RadioButton
            android:id="@+id/btnLimeTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lime_theme"
            android:textColor="?rootColor" />
    </RadioGroup>

</LinearLayout>